--- a/Módulo 2/desafio12/style.css
+++ b/Módulo 2/desafio12/style.css
@@ -63,6 +63,11 @@ section
     font-family: var(--fonte3);
     font-size: 3.5vw;
 }
+
+section > p 
+{
+    padding-bottom: 2em;
+}
 section.normal
 {
     background-color: white;
@@ -73,13 +78,31 @@ section.imagem
 {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.515);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p
 {
     padding: 5px;
     display: inline-block;
-    background-color: rgba(0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.24);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01
+{
+background-image: url(imagens/background001.jpg);
+background-position: right center;
+
+}
+section#img02
+{
+background-image: url(imagens/background002.jpg);
+background-position: right center;
+
+
 }
 footer
 {
